--- a/index.html
+++ b/index.html
@@ -66,13 +66,9 @@
 		<div class="skills-container">
 			<h1>Technical Skills</h1>
 			<p>
-				Languages: Python, Matlab, JavaScript, R, C/C++ 
+				Languages: Python, Matlab, JavaScript, R, C/C++
 				<br>
-				Web & Database: HTML, CSS, MongoDB
-				<br>
-				Front‐End & Back‐End: React.js, Express.js, Node.js, REST API 
-				<br>
-				Dev Tools & Repository: Git, VS Code, Postman
+				Front-End \& Back-End: HTML, CSS, MongoDB, React.js, Express.js, Node.js, Git, REST API
 			</p>
 		</div>
 	</div>
