added resume and other links

--- a/index.html
+++ b/index.html
@@ -43,7 +43,15 @@
 		<div class="aboutme-container">
 			<h1>About Me</h1>
 			<p>
-				Hi! I am currently pursuing a PhD in Applied Mathematics and Statistics at Stony Brook with an interest in computational biology. I did my undergraduate studies in biological engineering at Cornell University. Upon graduation, I worked at Rockefeller University for 3 years as a research assistant where I engineered vaccine candidates for the Powassan virus and tested their safety and efficacy in a mouse model. After taking advanced courses in mathematics and computer science during my PhD, I became more interested in learning about efficient algorithms and web design. I have a knack for wanting to learn new things and am currently looking for opportunities in software engineering or data science.
+				Hi! I am currently pursuing a PhD in Applied Mathematics and Statistics at Stony Brook University with a specialization in computational biology. I did my undergraduate studies in biological engineering at Cornell University. Upon graduation, I worked at Rockefeller University for 3 years as a research assistant. I successfully engineered vaccine candidates for Powassan virus and tested their safety and efficacy in a mouse model. Working alongside innovative scientists on these scientific problems provided me with invaluable experience in teamwork and critical thinking.
+				<br>
+				<br>
+				During my PhD, I became very interested in learning about efficient algorithms and web design after taking advanced courses in mathematics and computer science. I am motivated to expand my current knowledge and skill set in these areas, driven by my passion for continuous learning. I am eager to leverage my diverse background to make a meaningful impact in software engineering or data science roles.
+
+				<br>
+				<a href="https://www.linkedin.com/in/andrewcheungny" target="blank">LinkedIn</a> | 
+				<a href="https://github.com/acheung-1" target="blank">Github</a> |
+				<a href="assets/AndrewCheung_Resume.pdf" target="blank">Resume</a>
 			</p>
 		</div>
 	</div>
@@ -68,7 +76,7 @@
 			<p>
 				Languages: Python, Matlab, JavaScript, R, C/C++
 				<br>
-				Front-End \& Back-End: HTML, CSS, MongoDB, React.js, Express.js, Node.js, Git, REST API
+				Front-End & Back-End: HTML, CSS, MongoDB, React.js, Express.js, Node.js, Git, REST API
 			</p>
 		</div>
 	</div>
@@ -117,7 +125,7 @@
 			<div class="text-tabcontainer">
 				<h2>Moments</h2><br>
 				<p>
-					Moments is a social network website, built with JavaScript with React.js on the front-end and an Express.js framework on the back-end. MongoDB Atlas is used to store the collection of posts and users. Users create an account by entering an email, username, and password. On the home page, users can view and like posts made by others. Users can also write their own posts that includes a title, image, and caption. Every profile is customizable with a profile picture and bio section and can be viewed by others. 
+					Moments is a social network website, built with JavaScript with React.js on the front-end and Node.js with Express.js framework on the back-end. MongoDB Atlas is used for secure storage of user profiles and post data. Users register an account by providing an email, username, and password. On the home page, users can view and like posts made by other users on the platform. Users can also create their own posts that includes a title, image, and caption. Customizable profiles allow users to personalize their profiles with a profile picture and bio section. 
 				</p>
 			</div>
 			<div class="image-tabcontainer">
@@ -144,7 +152,7 @@
 					Use space to jump
 				</li>
 				<li>
-					Green power ups gives increased jump size when you land on top of it
+					Green power ups give increased jump size when you land on top of it
 				</li>
 				<li>
 					Only touch the red Enemy platforms from the top, otherwise you lose!
