--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 	<!-- Full-Screen Background Image Section -->
 	<section class="fullscreen-bg" id="myPage" style="background-image: url('assets/img/BackgroundPic.png')">
 		<h1>Andrew Cheung</h1>
-		<h3>PhD student in Applied Mathematics and Statistics</h1>
+		<h3>Master's student in Applied Mathematics and Statistics</h1>
 	</section>
 
 	<!-- About Me -->
@@ -43,10 +43,10 @@
 		<div class="aboutme-container">
 			<h1>About Me</h1>
 			<p>
-				Hi! I am currently pursuing a PhD in Applied Mathematics and Statistics at Stony Brook University with a specialization in computational biology. I did my undergraduate studies in biological engineering at Cornell University. Upon graduation, I worked at Rockefeller University for 3 years as a research assistant. I successfully engineered vaccine candidates for Powassan virus and tested their safety and efficacy in a mouse model. Working alongside innovative scientists on these scientific problems provided me with invaluable experience in teamwork and critical thinking.
+				Hi! I am currently pursuing a Master of Applied Mathematics and Statistics at Stony Brook University with a specialization in computational biology. I did my undergraduate studies in biological engineering at Cornell University. Upon graduation, I worked at Rockefeller University for 3 years as a research assistant. I successfully engineered vaccine candidates for Powassan virus and tested their safety and efficacy in a mouse model. Working alongside innovative scientists on these scientific problems provided me with invaluable experience in teamwork and critical thinking.
 				<br>
 				<br>
-				During my PhD, I became very interested in learning about efficient algorithms and web design after taking advanced courses in mathematics and computer science. I am motivated to expand my current knowledge and skill set in these areas, driven by my passion for continuous learning. I am eager to leverage my diverse background to make a meaningful impact in software engineering or data science roles.
+				I became very interested in learning about efficient algorithms and web design after taking advanced courses in mathematics and computer science. I am motivated to expand my current knowledge and skill set in these areas, driven by my passion for continuous learning. I am eager to leverage my diverse background to make a meaningful impact in software engineering or data science roles.
 
 				<br>
 				<a href="https://www.linkedin.com/in/andrewcheungny" target="blank">LinkedIn</a> | 
