--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
 
 	<div class="container-box">
 		<div class="container">
-			<div class="half2">
+			<div class="title-half">
 				<h2>Education</h2>
 			</div>
-			<div class="half">
+			<div class="list-half">
 				<div class="section">
 					<div class="item">
 						<div class="item-header">
@@ -68,10 +68,10 @@
 					</div>
 				</div>
 			</div>
-			<div class="half2">
+			<div class="title-half">
 				<h2>Work Experience</h2>
 			</div>
-			<div class="half">
+			<div class="list-half">
 				<div class="section">
 					<div class="item">
 						<div class="item-header">
@@ -83,7 +83,7 @@
 					<div class="item">
 						<div class="item-header">
 							<span class="title">Rockefeller University</span>
-							<span class="date">2019 - 2024</span>
+							<span class="date">2019 - 2022</span>
 						</div>
 						Research Assistant
 					</div>
@@ -102,10 +102,10 @@
 			<div class="aboutme-container">
 				<h2>About Me</h2>
 				<p>
-					Hi! I am currently working at Epic Systems as a Technical Solutions Engineer. I am responsible for customer success under the Ambulatory Application utilized by clinics and outpatient groups. I help troubleshoot issues by identifying deficiencies, escalating issues, and implementing code fixes.
+					Hi! I am a Technical Solutions Engineer at Epic Systems, where I focus on ensuring customer success for the Ambulatory Application used by clinics and outpatient groups. My role involves troubleshooting issues, identifying system deficiencies, escalating critical concerns, and implementing code fixes to improve functionality. While working at Epic, I’ve gained valuable insight into the decision-making process behind optimizing workflows for millions of users. This experience has strengthened my appreciation for well-designed software and its ability to solve real-world problems at scale.
 					<br>
 					<br>
-					I am eager to leverage my diverse background in computational biology and mathematics to make meaningful impacts in software engineering or data science roles. I've taken advanced graduate class in algorithms (string matching and computational geometry) and machine learning (statistical learning and NLP).
+					I am passionate about leveraging my background in computational biology and applied mathematics to drive meaningful impacts in software engineering and data science. I have completed advanced graduate coursework in algorithms (including string matching and computational geometry) and machine learning (covering statistical learning and NLP).
 				</p>
 			</div>
 		</div>
@@ -132,9 +132,9 @@
 			<div class="skills-container">
 				<h2>Technical Skills</h2>
 				<p>
-					Languages: Python, MATLAB, JavaScript, R, C/C++, SQL, MUMPS (M)
+					<strong>Language</strong>: Python, MATLAB, JavaScript, R, C/C++, SQL, MUMPS (M)
 					<br>
-					Front-End & Back-End: HTML, CSS, MongoDB, React.js, Express.js, Node.js, Git, REST API
+					<strong>Front-End & Back-End</strong>: HTML, CSS, MongoDB, React.js, Express.js, Node.js, Git, REST API
 				</p>
 			</div>
 		</div>
@@ -171,8 +171,8 @@
 			<button id = "first-tab", class="tablinks active" onclick="openTab(event, 'Project1')">Moments</button>
 			<button class="tablinks" onclick="openTab(event, 'Project2')">Mental Health ChatBot</button>
 			<button class="tablinks" onclick="openTab(event, 'Project3')">Retro-Doodle Jump Game</button>
-			<button class="tablinks" onclick="openTab(event, 'Project4')">Line Intersection Algorithm</button>
-			<button class="tablinks" onclick="openTab(event, 'Project5')">String Matching Algorithm</button>
+			<button class="tablinks" onclick="openTab(event, 'Project4')">Detecting Line Intersection</button>
+			<button class="tablinks" onclick="openTab(event, 'Project5')">String Matching</button>
 			<!-- <button class="tablinks" onclick="openTab(event, 'Project6')">Genome Recoding</button>
 			<button class="tablinks" onclick="openTab(event, 'Project7')">Virus Research</button> -->
 		</div>
@@ -184,6 +184,11 @@
 				<h2>Moments</h2><br>
 				<p>
 					Moments is a social networking website built with React.js for the front end and Node.js with the Express.js framework for the back end. MongoDB Atlas securely stores user profiles and post data. Users can register by providing an email, username, and password. On the home page, they can view and like posts from other users. Additionally, users can create their own posts, including a title, image, and caption. Customizable profiles allow for personalization with a profile picture and bio section.
+				</p>
+				<p>
+					<a href="https://github.com/Acheung-1/Moments" target="_blank">
+						<i class="fa-brands fa-github"></i> Github
+					</a> 
 				</p>
 			</div>
 			<div class="image-tabcontainer">
@@ -200,7 +205,7 @@
 				<p>
 					In this project, I worked with Shi Bin Lim to fine-tune the open-sourced Llama 2 Transformer model to act as a mental health assistant. Our goal was to enhance the accuracy and relevance of the model's responses in the context of mental health therapy.
 					
-					We used three datasets: <a href="https://huggingface.co/datasets/Amod/mental_health_counseling_conversations" target="_blank"> COUNSELING dataset</a> (which contains real therapist-patient responses on online platforms), <a href="https://huggingface.co/datasets/vibhorag101/phr_mental_therapy_dataset" target="_blank"> PHR dataset</a> (a synthetically generated counseling data), and data scraped from mental health-related subreddits such as r/offmychest, r/advice, r/mentalhealth, r/confessions, and r/self. 
+					We used three datasets: <a href="https://huggingface.co/datasets/Amod/mental_health_counseling_conversations" target="_blank"> COUNSELING</a> dataset (which contains real therapist-patient responses on online platforms), <a href="https://huggingface.co/datasets/vibhorag101/phr_mental_therapy_dataset" target="_blank"> PHR</a> dataset (a synthetically generated counseling data), and data scraped from mental health-related subreddits such as r/offmychest, r/advice, r/mentalhealth, r/confessions, and r/self. 
 						
 					We train three models using different combinations of these datasets: 
 					<li>
@@ -214,6 +219,11 @@
 					</li>
 					<br>
 					The performance of these models, compared with the vanilla Llama2, was evaluated using the BLEU score on unseen data (the last 500 rows of the COUNSELING dataset). Our results showed an improvement in the performance of the trained models, as measured by the 4-gram BLEU score.
+				</p>
+				<p>
+					<a href="https://github.com/Acheung-1/Llama2MentalHealth" target="_blank">
+						<i class="fa-brands fa-github"></i> Github
+					</a> 
 				</p>
 			</div>
 		</div>
@@ -245,6 +255,11 @@
 				<li>
 					Only touch the red Enemy platforms from the top, otherwise you lose!
 				</li>
+				<p>
+					<a href="https://github.com/Acheung-1/RetroDoodleJump" target="_blank">
+						<i class="fa-brands fa-github"></i> Github
+					</a> 
+				</p>
 			</div>
 			<div class="image-tabcontainer">
 				<img class="RDJ" src="assets/img/DoodleGame.png" alt="Picture of Game">
@@ -259,6 +274,11 @@
 				<h2>Bentley Ottmann</h2><br>
 				<p>
 					In this project, The task involves devising and implementing a sweep algorithm to determine whether the union of a given set of line segments in a plane forms a tree. Specifically, the algorithm should determine if the arrangement of segments has a single face—the face at infinity. An approach similar to the Bentley-Ottmann sweep algorithm should work. The problem is simplified with the assumption that no 3 points are collinear and no 2 endpoints lie on a horizontal or vertical line.
+				</p>
+				<p>
+					<a href="https://github.com/Acheung-1/BentleyOttmann" target="_blank">
+						<i class="fa-brands fa-github"></i> Github
+					</a> 
 				</p>
 			</div>
 			<div class="image-tabcontainer">
@@ -280,6 +300,11 @@
 					<br>
 					<br>
 					As a benchmark, the Knuth-Morris-Pratt (KMP) algorithm serves as a control, identifying all occurrences of a pattern of length m within a text of length n in O(n) time. This comparison helps assess the FM-index's accuracy and efficiency.
+				</p>
+				<p>
+					<a href="https://github.com/Acheung-1/StringMatching" target="_blank">
+						<i class="fa-brands fa-github"></i> Github
+					</a> 
 				</p>
 			</div>
 		</div>
