--- a/index.html
+++ b/index.html
@@ -102,10 +102,10 @@
 			<div class="aboutme-container">
 				<h2>About Me</h2>
 				<p>
-					Hi! I am a Technical Solutions Engineer at Epic Systems, where I focus on ensuring customer success for the Ambulatory Application used by clinics and outpatient groups. My role involves troubleshooting issues, identifying system deficiencies, escalating critical concerns, and implementing code fixes to improve functionality. While working at Epic, I’ve gained valuable insight into the decision-making process behind optimizing workflows for millions of users. This experience has strengthened my appreciation for well-designed software and its ability to solve real-world problems at scale.
+					Hi! I am a <strong>Technical Solutions Engineer</strong> at <strong>Epic Systems</strong>, where I focus on ensuring customer success for the Ambulatory Application used by clinics and outpatient groups. My role involves <strong>troubleshooting issues</strong>, <strong>escalating critical concerns</strong>, and <strong>implementing code fixes to improve functionality</strong>. While working at Epic, I’ve gained valuable insight into the decision-making process behind optimizing workflows for millions of users. This experience has strengthened my appreciation for well-designed software and its ability to solve real-world problems at scale.
 					<br>
 					<br>
-					I am passionate about leveraging my background in computational biology and applied mathematics to drive meaningful impacts in software engineering and data science. I have completed advanced graduate coursework in algorithms (including string matching and computational geometry) and machine learning (covering statistical learning and NLP).
+					I am passionate about leveraging my background in <strong>computational biology</strong> and <strong>applied mathematics</strong> to drive meaningful impacts in software engineering and data science. I have completed advanced graduate coursework in algorithms (including string matching and computational geometry) and machine learning (covering statistical learning and NLP).
 				</p>
 			</div>
 		</div>
@@ -147,13 +147,13 @@
 				<h2>Publications</h2>
 				<ul>
 					<li>
-						<strong>Cheung A</strong>, ... MacDonald, M.R., Hoffmann, H.H. (2023). 
-						Characterization of live-attenuated Powassan virus vaccine candidates identifies an efficacious prime-boost strategy for mitigating Powassan virus disease in a murine model. 
+						<strong>Cheung A</strong>, ... MacDonald, M.R., Hoffmann, H.H. (2023).
+						<a href="https://doi.org/10.3390/vaccines11030612" target="_blank">Characterization of live-attenuated Powassan virus vaccine candidates identifies an efficacious prime-boost strategy for mitigating Powassan virus disease in a murine model.</a>
 						<em>Vaccines</em> 11(3), 612.
 					</li>
 					<li>
-						Rosain J, ... <strong>Cheung A</strong>, et al. (2023). 
-						Human IRF1 governs macrophagic IFN-γ immunity to mycobacteria. 
+						Rosain J, ... <strong>Cheung A</strong>, et al. (2023).
+						<a href="https://pubmed.ncbi.nlm.nih.gov/36736301/" target="_blank">Human IRF1 governs macrophagic IFN-γ immunity to mycobacteria.</a>
 						<em>Cell</em> 186(3), 621-645.
 					</li>
 				</ul>
@@ -184,7 +184,7 @@
 				<div class="text-tabcontainer">
 					<h2>Moments</h2><br>
 					<p>
-						Moments is a social networking website built with React.js for the front end and Node.js with the Express.js framework for the back end. MongoDB Atlas securely stores user profiles and post data. Users can register by providing an email, username, and password. On the home page, they can view and like posts from other users. Additionally, users can create their own posts, including a title, image, and caption. Customizable profiles allow for personalization with a profile picture and bio section.
+						I built Moments, a social networking website built with React.js for the front end and Node.js with the Express.js framework for the back end. To securely store user profiles and posts, I used MongoDB Atlas. Users can register by providing an email, username, and password. On the home page, they can view and like posts from other users. Additionally, users can create their own posts, including a title, image, and caption. Customizable profiles allow for personalization with a profile picture and biography section.
 					</p>
 					<p>
 						<a href="https://github.com/Acheung-1/Moments" target="_blank">
@@ -206,9 +206,9 @@
 				<div class="noimagetext-tabcontainer">
 					<h2>Mental Health Chatbot</h2><br>
 					<p>
-						In this project, I fine-tuned the open-sourced Llama 2 Transformer model to act as a mental health assistant. Our goal was to enhance the accuracy and relevance of the model's responses in the context of mental health therapy.
+						In this project, I fine-tuned the open-sourced Llama 2 Transformer model to act as a mental health assistant. My goal was to enhance the accuracy and relevance of the model's responses in the context of mental health therapy.
 						
-						We used three datasets: <a href="https://huggingface.co/datasets/Amod/mental_health_counseling_conversations" target="_blank"> COUNSELING</a> dataset (which contains real therapist-patient responses on online platforms), <a href="https://huggingface.co/datasets/vibhorag101/phr_mental_therapy_dataset" target="_blank"> PHR</a> dataset (a synthetically generated counseling data), and data scraped from mental health-related subreddits such as r/offmychest, r/advice, r/mentalhealth, r/confessions, and r/self. 
+						Three datasets were used: <a href="https://huggingface.co/datasets/Amod/mental_health_counseling_conversations" target="_blank"> COUNSELING</a> dataset (which contains real therapist-patient responses on online platforms), <a href="https://huggingface.co/datasets/vibhorag101/phr_mental_therapy_dataset" target="_blank"> PHR</a> dataset (a synthetically generated counseling data), and data scraped from mental health-related subreddits such as r/offmychest, r/advice, r/mentalhealth, r/confessions, and r/self. 
 							
 						We train three models using different combinations of these datasets: 
 						<li>
@@ -221,7 +221,7 @@
 							200 rows of COUNSELING + 1000 rows of Reddit web-scraped data
 						</li>
 						<br>
-						The performance of these models, compared with the vanilla Llama2, was evaluated using the BLEU score on unseen data (the last 500 rows of the COUNSELING dataset). Our results showed an improvement in the performance of the trained models, as measured by the 4-gram BLEU score.
+						The performance of these models, compared with the vanilla Llama2, was evaluated using the BLEU score on unseen data (the last 500 rows of the COUNSELING dataset). The results showed an improvement in the performance of the trained models, as measured by the 4-gram BLEU score.
 					</p>
 					<p>
 						<a href="https://github.com/Acheung-1/Llama2MentalHealth" target="_blank">
@@ -281,7 +281,13 @@
 				<div class="text-tabcontainer">
 					<h2>Bentley Ottmann</h2><br>
 					<p>
-						In this project, The task involves devising and implementing a sweep algorithm to determine whether the union of a given set of line segments in a plane forms a tree. Specifically, the algorithm should determine if the arrangement of segments has a single face—the face at infinity. An approach similar to the Bentley-Ottmann sweep algorithm should work. The problem is simplified with the assumption that no 3 points are collinear and no 2 endpoints lie on a horizontal or vertical line.
+						In this program I created, user-drawn line segments are analyzed to determine whether their union forms a closed face.
+						<br>
+						<br>
+						Each line segment is represented as a node within a custom-built AVL tree, designed to manage the Sweep Line Status (SLS), which maintains the segments in left-to-right order as a horizontal sweep line progresses through segments. The tree determines the placement of nodes by performing left tests, deciding whether a segment should be inserted as a left or right child. As the sweep line moves downward, segments are inserted into or removed from the BST, and intersections between adjacent segments are identified and processed. When an intersection occurs, the involved segments swap positions in the AVL tree, and potential new intersections are checked efficiently. At any moment, the event queue contains only the highest intersection that has yet to be processed.
+						<br>
+						<br>
+						Each intersection, once processed, is assigned a unique label, which is stored in the corresponding segment’s node. If two intersecting segments share the same label, it propagates through subsequent intersections along the structure. The key idea is that the topmost intersection label is passed down through all related segments. A closed face is identified when two intersecting segments already contain the same label, confirming that they have previously intersected and fully enclosed a region.
 					</p>
 					<p>
 						<a href="https://github.com/Acheung-1/BentleyOttmann" target="_blank">
@@ -303,7 +309,7 @@
 				<div class="noimagetext-tabcontainer">
 					<h2>String Matching using FM-Index</h2><br>
 					<p>
-						The string-matching problem is a fundamental class of string algorithms, widely used in bioinformatics for mapping sequencing reads to genes or protein sequences. This project implements key data structures, including the suffix array, Burrows-Wheeler Transform (BWT), and FM-index.
+						I created this project to explore and test different approaches to the string-matching problem, a fundamental algorithmic challenge with important applications in bioinformatics, such as mapping sequencing reads to genes or protein sequences. My goal was to implement and compare key data structures, including the suffix array, Burrows-Wheeler Transform (BWT), and FM-index, to see how they perform in efficient pattern searching.
 						<br>
 						<br>
 						Given a long text of length n and a short pattern of length m, the suffix array is constructed in O(n log n) time by sorting suffixes based on the first 2<sup>i</sup> characters (a suboptimal but sufficient approach). The FM-index enables efficient pattern searching in reverse order in O(m) time, leveraging the BWT to determine character ranks and locate positions in the suffix array.
@@ -370,7 +376,10 @@
 		<hr>
 		<h1>Contact Me</h1>
 		<p>
-			If you'd like to get in touch, feel free to email me at amc2697@gmail.com or connect with me on <a href="https://www.linkedin.com/in/andrewcheungny" target="blank">LinkedIn</a>.
+			If you'd like to get in touch, feel free to email me at amc2697@gmail.com or connect with me on 
+			<a href="https://www.linkedin.com/in/andrewcheungny" target="_blank">
+				<i class="fa-brands fa-linkedin"></i>LinkedIn
+			</a>
 		</p>
 	</footer>
 
