style and content

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 		</div>
 	</div>
 	<!-- Project 1 -->
-	<div class="container-box">
+	<div class="tabcontainer-box">
 		<div id="Project1" class="tabcontent">
 			<div class="tabcontainer">
 				<div class="text-tabcontainer">
@@ -200,7 +200,7 @@
 	</div>
 
 	<!-- Project 2 -->
-	<div class="container-box">
+	<div class="tabcontainer-box">
 		<div id="Project2" class="tabcontent">
 			<div class="tabcontainer">
 				<div class="noimagetext-tabcontainer">
@@ -235,7 +235,7 @@
 
 
 	<!-- Project 3 -->
-	<div class="container-box">
+	<div class="tabcontainer-box">
 		<div id="Project3" class="tabcontent">
 			<div class="tabcontainer">
 				<div class="text-tabcontainer">
@@ -275,7 +275,7 @@
 	</div>
 
 	<!-- Project 4 -->
-	<div class="container-box">
+	<div class="tabcontainer-box">
 		<div id="Project4" class="tabcontent">
 			<div class="tabcontainer">
 				<div class="text-tabcontainer">
@@ -303,11 +303,11 @@
 	</div>
 
 	<!-- Project 5 -->
-	<div class="container-box">
+	<div class="tabcontainer-box">
 		<div id="Project5" class="tabcontent">
 			<div class="tabcontainer">
 				<div class="noimagetext-tabcontainer">
-					<h2>String Matching using FM-Index</h2><br>
+					<h2>String Matching</h2><br>
 					<p>
 						I created this project to explore and test different approaches to the string-matching problem, a fundamental algorithmic challenge with important applications in bioinformatics, such as mapping sequencing reads to genes or protein sequences. My goal was to implement and compare key data structures, including the suffix array, Burrows-Wheeler Transform (BWT), and FM-index, to see how they perform in efficient pattern searching.
 						<br>
@@ -358,7 +358,7 @@
 				</p>
 			</div>
 			<div class="image-tabcontainer">
-				<img class="vaccine" src="assets/img/VaccineResults.png" alt="Vaccination Results">
+				<img class="vaccine-image" src="assets/img/VaccineResults.png" alt="Vaccination Results">
 			</div>
 		</div>
 	</div> -->
