--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 			<div class="aboutme-container">
 				<h2>About Me</h2>
 				<p>
-					Hi! I am a <strong>Technical Solutions Engineer</strong> at <strong>Epic Systems</strong>, where I focus on ensuring customer success for the Ambulatory Application used by clinics and outpatient groups. My role involves <strong>troubleshooting issues</strong>, <strong>escalating critical concerns</strong>, and <strong>implementing code fixes to improve functionality</strong>. While working at Epic, I’ve gained valuable insight into the decision-making process behind optimizing workflows for millions of users. This experience has strengthened my appreciation for well-designed software and its ability to solve real-world problems at scale.
+					Hi! I am a <strong>Technical Solutions Engineer</strong> at <strong>Epic Systems</strong>. I focus on customer success on Ambulatory used by clinics and outpatient groups. My role involves <strong>troubleshooting issues</strong>, <strong>escalating critical concerns</strong>, and <strong>implementing code fixes to improve functionality</strong>. I am involved in the decision-making process behind optimizing workflows for millions of users. This experience has strengthened my appreciation for well-designed software and its ability to solve real-world problems.
 					<br>
 					<br>
 					I am passionate about leveraging my background in <strong>computational biology</strong> and <strong>applied mathematics</strong> to drive meaningful impacts in software engineering and data science. I have completed advanced graduate coursework in algorithms (including string matching and computational geometry) and machine learning (covering statistical learning and NLP).
