--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
 		<hr>
 		<h1>Contact Me</h1>
 		<p>
-			If you'd like to get in touch, feel free to email me at amc2697@gmail.com or connect with me on 
+			If you'd like to get in touch, feel free to email me at AndrewM.Cheung1@gmail.com or connect with me on 
 			<a href="https://www.linkedin.com/in/andrewcheungny" target="_blank">
 				<i class="fa-brands fa-linkedin"></i>LinkedIn
 			</a>
